plugins/kotlin/idea/tests/testData/checker/regression/InterfaceDeclarationAsExpression.fir.kt
val p = 1 <error descr="[OVERLOAD_RESOLUTION_AMBIGUITY]"><</error> <error descr="[EXPRESSION_EXPECTED]">interface A {
    fun f() {
        f()
    }
}</error>
